Update Room Thermostat OT Control to v1.0.5

--- a/room_thermostat_ot_control.yaml
+++ b/room_thermostat_ot_control.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Room Thermostat OT Control v1.0.4
+  name: Room Thermostat OT Control v1.0.5
   description: >
     Uses operative temperature (OT) and scheduled setpoint (as desired OT) to
     dynamically adjust the thermostat air temperature so the room "feels like"
@@ -284,7 +284,7 @@ action:
         {{ (2 * desired_ot - operative_temp) }}
 
       clamped_thermostat: >
-        {% set t = raw_thermostat %}
+        {% set t = raw_thermostat | float %}
         {% if t < min_thermostat_temp %}
           {{ min_thermostat_temp }}
         {% elif t > max_thermostat_temp %}
@@ -297,21 +297,23 @@ action:
         {{ ((clamped_thermostat * 2) | round(0) / 2) }}
 
       smoothed_thermostat: >
-        {% set t_new = rounded_thermostat %}
-        {% set t_curr = thermostat_currentsetpoint %}
-        {% set age = (as_timestamp(now()) - as_timestamp(states[thermostat].last_changed)) | float(0) %}
-  
-        ## Use smoothing ONLY if:
-        ##  - smoothing is enabled
-        ##  - current setpoint is sensible (>5°C)
-        ##  - the thermostat has been stable for >180 seconds
-        
+        {% set t_new = rounded_thermostat | float %}
+        {% set t_curr = thermostat_currentsetpoint | float %}
+        {% set last = states[thermostat].last_changed if thermostat in states else none %}
+        {% set age = (as_timestamp(now()) - as_timestamp(last)) | float(9999) %}
+
+        {# Apply smoothing ONLY when:
+           - smoothing is enabled
+           - current setpoint is >5°C (avoids invalid states)
+           - thermostat state is older than 180 seconds (avoids reboot drop)
+        #}
+
         {% if smoothing_enabled
               and t_curr > 5
               and age > 180 %}
-            {{ (t_new * 0.6 + t_curr * 0.4) }}
+          {{ (t_new * 0.6 + t_curr * 0.4) }}
         {% else %}
-            {{ t_new }}
+          {{ t_new }}
         {% endif %}
 
 
