--- a/room_thermostat_ot_control.yaml
+++ b/room_thermostat_ot_control.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Room Thermostat OT Control v1.0.8
+  name: Room Thermostat OT Control v1.0.9
   description: >
     Uses operative temperature (OT) and scheduled setpoint (as desired OT) to
     dynamically adjust the thermostat air temperature so the room "feels like"
@@ -286,7 +286,7 @@ action:
   - variables:
       desired_ot: >
         {% if is_unoccupied_bool %}
-          {{ scheduled_setpoint + unoccupied_offset }}
+          {{ scheduled_setpoint + (unoccupied_offset / 2) }}
         {% else %}
           {{ scheduled_setpoint }}
         {% endif %}
